Basic auth is ready
